Update Django field to use six for Django 3.0 compatibility

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{27}-django-{19,110,111}
     py{34}-django-{110,111,20}
     py{35,36,37}-django-{110,111,20,21}
+    py{36,37}-django-{30}
     py36-flake8
 
 [pytest]
@@ -28,6 +29,7 @@ deps =
     django-111: Django>=1.11,<1.12
     django-20: Django>=2.0,<2.1
     django-21: Django>=2.1,<2.2
+    django-30: Django>=3.0,<3.1
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir} --cov
